<resources>
    <string name="app_name">Tarea3_ProgramacionMultimedia</string>
    <string name="enviar_sms">Enviar SMS</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="sms">SMS</string>
    <string name="ajustes">Ajustes</string>
    <string name="mail">Mail</string>
    <string name="llamada">Llamada</string>
    <string name="emergencias_express">Emergencias Express</string>
    <string name="todo">TODO</string>
    <string name="contrase_a">Contraseña</string>
    <string name="preferencias">Preferencias</string>
    <string name="tel_fono_llamadas">Teléfono Llamadas</string>
    <string name="correo">Correo</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="tel_fono_mensajes">Teléfono Mensajes</string>
    <string name="obtener_localizaci_n">Obtener Localización</string>
    <color name="orange">#F29100</color>
</resources>