<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    tools:context=".PreferencesActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/preferencias"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Usuario"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/PrefUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contrase_a"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/PrefPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tel_fono_llamadas"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/PrefPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tel_fono_mensajes"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/PrefMensajes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/PrefMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/SavePrefs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/guardar_cambios"
        tools:ignore="TextContrastCheck" />

</LinearLayout>